[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/ComplexDT.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/TebengeLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/TebengeCheckButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://GameDVDCardtridge/Tebenge/SpareParts/BoolDT.gd" type="Script" id=4]
[ext_resource path="res://GameDVDCardtridge/Tebenge/Assets/images/ruleEndIcon.png" type="Texture" id=5]
[ext_resource path="res://GameDVDCardtridge/Tebenge/Assets/images/forbiddenIcon.png" type="Texture" id=6]

[node name="BoolDT" instance=ExtResource( 1 )]
margin_right = 460.0
margin_bottom = 328.0
script = ExtResource( 4 )
title = "True False"
value = "ON / OFF"
icon = ExtResource( 5 )
iconOff = ExtResource( 6 )
state = true

[node name="BoolLabel" parent="." index="0" instance=ExtResource( 2 )]
margin_right = 460.0
margin_bottom = 50.0
text = "True False"

[node name="CheckButton" parent="." index="1" instance=ExtResource( 3 )]
margin_top = 54.0
margin_right = 460.0
margin_bottom = 328.0
size_flags_horizontal = 3
size_flags_vertical = 3
pressed = true
text = "ON / OFF"
icon = ExtResource( 5 )
expand_icon = true

[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]
